Generate basic ynab client.
Includes the minimum necessary to retrieve a list of budgets and
accounts.
